2009-01-29  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/batteries_help.ml: in [load_index], only adding [basename] and [leafname] if they're not equal

	* src/main/nothreads/batteries.ml: [Data] added

	* src/core/extlib/substring.mli: What the heck is this module?

	* src/main/nothreads/batteries.ml: [Vect] added

	* src/main/threads/batteries.ml: [Vect] added

	* src/core/extlib.mlpack: [OptionLabels], [LazyListLabels] removed

	* src/core/_tags: extlib.mli now uses [use_sexplib] instead of [pkg_sexplib]

	* myocamlbuild.ml: [use_sexplib] added

	* src/core/extlib/lazyList.ml*: [ ^:^ ] added

	* examples/: rearranged

	* src/main/threads/batteries.ml: [LazyList] added

	* src/main/nothreads/batteries.ml: [LazyList] added

	* src/batteries_toolchain/batteries_help.ml: in [kind_of_name], "language" is also associated to [Topics]

	* build/META.in: [pa_comprehension.syntax] restored

2009-01-28  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* .gitignore: removed [ocaml] and [configure]

	* build/odoc_tags.ml: Jokes added

	* src/batteries_toolchain/top.ml: [print_*] registered

	* src/core/extlib.mlpack: moved [ExtString] above [ExtUTF8]

	* build/META.in: in [archive(toploop)], [batteries_toolchain.cma] replaces [batteries_help.cmo]

	* src/batteries_toolchain/ocaml: argument of [ocaml -init] now defined from [`ocamlfind`]

	* src/batteries_toolchain.mllib: created

	* Makefile.in: [top] now depends on [batteries_toolchain.cma]
	
	* src/batteries_toolchain/batteries_print.ml*: created

	* src/_tags: batteries_toolchain included

	* src/core/extlib/rope.ml*: [to_string], [of_string] added

	* batteries.godiva (Depends): godi-ocamlnet

	* src/syntax/pa_strings/pa_strings.ml: "u" is not shared anymore

	* doc/batteries/myocamlbuild.ml: added pa_string

2009-01-27  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/toolchain/batlib_Sexp_Conv.mli: [opaque] renamed [sexp_opaque]
